package topstack_Autoscale;

option java_package = "com.transcend.autoscale.message";
option java_outer_classname = "DescribeScalingActivitiesMessage";

message DescribeScalingActivitiesRequestMessage {
    required bool typeId = 218;

    required string  requestId = 1;
    required string  callerAccessKey = 2;
    repeated string  activityIds= 3;
    optional string  autoScalingGroupName = 4;
    optional uint32  maxRecords = 5;
    optional string  nextToken  = 6;
}

message DescribeScalingActivitiesResultMessage {
    required bool     typeId = 219; 
    message  Activity {
    	required string activityId = 1;
    	required string autoScalingGroupName = 2;
    	required string cause = 3;
    	optional string description = 4;
    	optional string details = 5;
    	optional string endTime = 6;
    	optional uint32 progress = 7;
    	required string startTime = 8;
    	required string statusCode = 9;
    	optional string statusMessage = 10;
    }
    required string   requestId = 1;
    required string   callerAccessKey = 2;
    repeated Activity activities = 3;
    required string   nextToken = 4;
}